--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  freezed_annotation: ^3.1.0
+  collection: any
+  hive_ce: ^2.11.3
+  hive_ce_flutter: ^2.3.1
+  json_annotation: ^4.9.0
+  auto_route: ^10.1.0+1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +54,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  riverpod_generator: ^2.6.5
+  build_runner: ^2.5.4
+  custom_lint: ^0.7.6
+  riverpod_lint: ^2.6.5
+  freezed: ^3.1.0
+  hive_ce_generator: ^1.9.2
+  json_serializable: ^6.9.5
+  auto_route_generator: ^10.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
