--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@
 .swiftpm/
 migrate_working_dir/
 
+# Firebase
+.firebase/
+.firebaserc
+firebase.json
+lib/firebase_options.dart
+
 # IntelliJ related
 *.iml
 *.ipr
