--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   auto_route: ^10.1.0+1
   uuid: ^4.5.1
   flex_color_picker: ^3.7.1
+  firebase_core: ^4.0.0
 
 dev_dependencies:
   flutter_test:
